Added student edit and delete capabilities

--- a/student/templates/student/base.html
+++ b/student/templates/student/base.html
@@ -20,6 +20,7 @@
 	<div id="left">
 		{% block content %}
 		{% endblock %}
+		<div class="clearing"></div>
 		<div id="sort_links">
 			Sort by:&nbsp;
         	<a href="#" class="sorter" id="sorter_lastname">Last Name</a>
