Added edit and delete student functionality

--- a/student/static/student/directory.css
+++ b/student/static/student/directory.css
@@ -117,7 +117,12 @@ strong, b {
 	float: left;
 	padding: 7px 7px 7px 0;
 	text-align: justify;
-	width: 793px;
+    width: 793px;
+    max-height: 375px;
+}
+
+#sort_links {
+    margin-top: 20px;
 }
 
 #content #right {
