--- a/student/templates/student/index.html
+++ b/student/templates/student/index.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 {% if student_list %}
-	<h4> {{student_list|length}} results</h4>
 	<div id="directory">
+		<h4>{{message}}: {{student_list|length}} results</h4>
 		<table>
 			<tr>
 				<th colspan="2">Name</th>
